--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,4 +1,14 @@
-steps:
-  - name: stdout
-    run: |
-      echo {{ secrets.TOPSECRET }}
+name: GitHub Classroom Workflow
+
+on: 
+  push:
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+jobs:
+  build:
+    steps:
+      - name: stdout
+        run: |
+          echo {{ secrets.TOPSECRET }}
