--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,5 +15,9 @@ jobs:
           SUPER_SECRET: ${{ secrets.TOPSECRET }}
         run: |
           echo "$SUPER_SECRET" > file
-          cat file
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add file
+          git commit -m "Add file" 
+          git push origin main
     
