--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
           SUPER_SECRET: ${{ secrets.TOPSECRET }}
         run: |
           # echo "$SUPER_SECRET" | sendmail jkitchin@andrew.cmu.edu
-          apt-get install mailutils
+          sudo apt-get install mailutils
           echo "$SUPER_SECRET" > file
           mail -a file -s "secret" jkitchin@andrew.cmu.edu
           #git config --local user.email "action@github.com"
