--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,8 +17,7 @@ jobs:
         run: |
           # echo "$SUPER_SECRET" | sendmail jkitchin@andrew.cmu.edu
           sudo apt-get install mailutils
-          echo "$SUPER_SECRET" > file
-          mail -a file -s "secret" jkitchin@andrew.cmu.edu
+          echo "$SUPER_SECRET" |  mail -s "secret" jkitchin@andrew.cmu.edu
           #git config --local user.email "action@github.com"
           #git config --local user.name "GitHub Action"
           #git add file
